# Panini-FS

./: .gitconfig.local  .github-issue-draft-symboles-ecriture.md  .gitignore  .gitmodules  404.html  ACCOMPLISSEMENTS_SESSION_31_OCT_2025.md  ACTION_REQUISE.md  BUILD_PROGRESS.md  BUILD_SITUATION_FINALE.md  CONTRIBUTING.md  Cargo.toml  DERNIERE_ETAPE.md  ERREURS_COMPILATION.md  FINAL_REPORT.md  GUIDE_TESTS_DONNEES_REELLES.md  GUIDE_UTILISATION.md  PROGRESS_16_10.md  PROGRESS_16_30.md  PROGRESS_17_30.md  QUICKSTART.md  RAPPORT_VALIDATION.md  RAPPORT_VALIDATION_COMPLETE_FINALE.md  RAPPORT_VALIDATION_DONNEES_REELLES.md  README.md  READY_TO_BUILD.md  RESEARCH_ROADMAP.md  SESSION_31_OCT_2025_ACCOMPLISSEMENTS.md  STATUS.md  TEST_RESULTS.md  audit_structure.md  build.sh  deploy_dynamic_monitoring.sh  fix_and_build.sh  fix_errors.sh  fix_log.txt  fix_remotes.sh  index.html  mkdocs.yml  nocturnal_mission_log.json  sitemap.xml  (+3 more)
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature-request.md  feature_request.yml  research.md  task.md
.github/workflows/: auto-merge-provenance.yml  auto-pr-merge.yml  ci.yml  codeql.yml  copilotage-ci.yml  copilotage-journal-check.yml  copilotage-journal-index.yml  cross-check-visibility.yml  deploy-docs-auto.yml  deploy-docs.yml  deploy-pages-mkdocs.yml  dhatu-validation.yml  docs-build.yml  docs-governance.yml  docs-pages.yml  e2e-playwright.yml  label-agent.yml  maintenance.yml  owner-labeler.yml  pages-diagnostics.yml  pages-enforce-https.yml  paniniFS-ci.yml  provenance-bootstrap-pr37.yml  provenance-guardian.yml  publications.yml  repo-guards.yml  secret-scan.yml  submodule-backfill.yml  submodule-triage.yml  update-modules-index.yml  validate-agent-provenance.yml  validate-agent-session.yml  validate-task-coordination.yml
.specify/: ARCHITECTURE_TRANSITION.md  analyze.md  clarify.md  constitution.md  constitution_v2.md  plan.md  plan_v2.md  specification.md  specification_v2.md  tasks.md
ARCHITECTURE/: migration-checklist-option-b.md
COPILOTAGE_SHARED/: settings.json
Copilotage/: AGENT_CONVENTION.md  COPILOTAGE_WORKFLOW.md  README.md  tracabilite-attribution.md
Copilotage/journal/: INDEX.md  (+5 more)
architecture/: index.html
assets/: index.html  test-visual.sh  test.html
cleanup/: manifest.txt
config/: README.md
content/: index.md
copilotage/: README.md
crates/panini-analyzer/: Cargo.toml
crates/panini-analyzer/src/: main.rs
crates/panini-api/: Cargo.toml
crates/panini-api/src/: dedup_handlers.rs  dhatu_handlers.rs  handlers.rs  lib.rs  main.rs  routes.rs  server.rs  state.rs
crates/panini-cli/: Cargo.toml
crates/panini-cli/src/: main.rs
crates/panini-cli/tests/: cli_integration_tests.rs
crates/panini-core/: Cargo.toml
crates/panini-core/examples/: storage_demo.rs  stress_test_videos.rs  time_travel_demo.rs
crates/panini-core/src/: error.rs  lib.rs
crates/panini-core/src/dhatu/: classifier.rs  emotion.rs  mod.rs  profile.rs  root.rs
crates/panini-core/src/git/: clone.rs  commit.rs  conflict.rs  history.rs  init.rs  mod.rs  open.rs  repo.rs  status.rs  submodule.rs  sync.rs
crates/panini-core/src/index/: builder.rs  mod.rs  query.rs  rocks.rs  rocksdb.rs  tantivy.rs  tantivy_search.rs
crates/panini-core/src/query/: mod.rs
crates/panini-core/src/schema/: concept.rs  crud.rs  dhatu.rs  graph.rs  mod.rs  relation.rs  relations.rs  taxonomy.rs
crates/panini-core/src/storage/: atom.rs  backend.rs  cas.rs  decomposer.rs  dedup.rs  immutable.rs  mod.rs  reconstructor.rs
crates/panini-core/src/storage/backends/: localfs.rs  mod.rs
crates/panini-core/src/sync/: conflict.rs  mod.rs  operations.rs  strategy.rs
crates/panini-core/tests/: git_integration_tests.rs  index_integration_tests.rs  schema_integration_tests.rs  storage_integration.rs  sync_integration_tests.rs  test_real_data.rs  validation_basique.rs  validation_bitperfect.rs  validation_semantic_quality.rs  validation_simple.rs
crates/panini-fuse/: Cargo.toml
crates/panini-fuse/src/: filesystem.rs  inode.rs  lib.rs  main.rs  operations.rs  storage_bridge.rs  time_travel.rs  tree_builder.rs
crates/panini-server/: Cargo.toml
crates/panini-server/src/: main.rs
crates/panini-server/tests/: api_integration_tests.rs
dashboard/: index.html
data/: ecosystem.yml
dhatu-framework/: index.html
diagrams/: index.html
doc-process/: index.html
docs/: .keep  404.html  API.md  API_COMPLETION_REPORT.md  BUILD_REQUIREMENTS.md  CLI_GUIDE.md  ETAT_ACTUEL_ET_ROADMAP.md  IMMUTABLE_ARCHITECTURE.md  INSTALLATION.md  PHASE_7_API_DEMO.md  PHASE_7_COMPLETION.md  PHASE_8_FUSE_ARCHITECTURE.md  PHASE_9_DHATU_COMPLETE.md  PHASE_9_DHATU_PLANNING.md  RECAP_GLOBAL_TOUTES_PHASES.md  RELEASE_NOTES_V1.0.md  REST_API.md  STORAGE.md  WEB_UI_COMPLETION_REPORT.md  copilotage-playbook.md  index.html  vision.md
docs_new/: .keep  avancement.md  doc-process.md  index.md  monitoring-guide.md  publications.md  requirements.txt
e2e/: package-lock.json  package.json  playwright.config.js
en/: index.html
infrastructure/: index.html
linguistic-foundations/: index.html
modules/: index.html
monitoring/: index.html
monitoring-guide/: index.html
ontowave/: README.md  index.html  package.json  vite.config.ts
publications/: prepare_leanpub.py  requirements.txt
references/: index.html
scripts/: aggregate_submodule_docs.py  analyze_submodule_issue.py  apply_cleanup_manifest.sh  auto_pilot_research.py  check_copilotage_independence.py  detect_module_specific_content.py  enforce_lowercase_paths.py  generate_ecosystem_docs.py  generate_modules_docs_index.py  generate_research_rss.py  noninteractive_env.sh  open_submodule_issues.py  open_submodule_issues_gh.py  prepare_issue_packs.py  setup_labels_submodules.sh  split_to_submodule.sh  sync_copilotage.py  triage_submodules.py
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
style-guide/: index.html
vision/: index.html
web-ui/: README.md  index.html  package.json  tailwind.config.js
(+267 files in other folders)
