# Panini-FS Workspace
# Git-Native Distributed Knowledge Graph System

[workspace]
members = [
    "crates/panini-core",
    "crates/panini-cli",
    "crates/panini-api",
    "crates/panini-analyzer", "crates/panini-fuse",
    # "crates/panini-server",  # TODO: Fix axum 0.7 API + Send trait for Repository
]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2021"
rust-version = "1.75"
authors = ["Panini-FS Contributors <panini@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/stephanedenis/Panini-FS"
homepage = "https://github.com/stephanedenis/Panini-FS"
documentation = "https://docs.rs/panini-core"
keywords = ["knowledge-graph", "git", "markdown", "semantic", "pkm"]
categories = ["command-line-utilities", "database-implementations", "data-structures"]

[workspace.dependencies]
# Git operations
git2 = { version = "0.18", default-features = false, features = ["https", "ssh", "vendored-openssl"] }

# Storage & indexing  
rocksdb = { version = "0.24", default-features = false }
tantivy = { version = "0.22", default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Markdown & parsing
pulldown-cmark = { version = "0.9", default-features = false }

# Graph algorithms
petgraph = { version = "0.6" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP/REST (server)
axum = { version = "0.7", features = ["multipart"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# CLI
clap = { version = "4.4", features = ["derive", "cargo", "env", "unicode", "wrap_help"] }
colored = "2.1"
indicatif = "0.17"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Crypto & hashing
sha2 = "0.10"
blake3 = "1.5"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
walkdir = "2.4"
glob = "0.3"
regex = "1.10"
once_cell = "1.19"
lazy_static = "1.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Language detection (fulltext search)
whatlang = "0.16"

# Configuration
config = "0.13"
toml = "0.8"

# Testing
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
pretty_assertions = "1.4"
proptest = "1.4"
mockall = "0.12"

# Dev dependencies (for workspace)
[workspace.dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
pretty_assertions = "1.4"
proptest = "1.4"
mockall = "0.12"

# Profile configurations
[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"

[profile.test]
opt-level = 1
