[package]
name = "panini-analyzer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "panini-analyzer"
path = "src/main.rs"

[dependencies]
panini-core = { path = "../panini-core" }
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
sha2 = "0.10"
tempfile = "3.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
