[package]
name = "panini-api"
version = "2.0.0"
edition = "2021"
authors = ["Panini-FS Contributors"]
description = "REST API server for Panini-FS temporal filesystem"

[dependencies]
panini-core = { path = "../panini-core" }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = { workspace = true }

# HTTP types
http = "1.0"

# Time
chrono = { workspace = true }

# Cryptography
sha2 = "0.10"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
